je kan nu niet meer knop inhouden en ook niet meer meerdere heel erg snel na elkaar afvuren max ook 1 per punt 3 seconden

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "4",
     "phaser": "3.55.2",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "stats.js": "^0.17.0"
   }
 }
