--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "4",
     "phaser": "3.55.2",
     "socket.io": "^4.3.2",
